use css for changing view, resolve navbar flickering issue

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -635,3 +635,10 @@ pre tt:after {
     font-size: 100%;
   }
 }
+
+.root {
+  display: grid;
+  @media screen and (max-width: 768px) {
+    gridTemplateColumns: "minmax(210px, 30%) auto 1fr"
+  }
+}
